--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
     restart: unless-stopped
     ports:
       - "8090:80"
+    volumes:
+      - ./web/html:/usr/share/nginx/html:ro
     depends_on:
       - api
     networks:
