--- a/web/html/manifest.json
+++ b/web/html/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "CtrlTab",
-    "short_name": "CtrlTab",
+    "name": "ctrlTAB",
+    "short_name": "ctrlTAB",
     "description": "Self-hosted link manager",
     "start_url": "/",
     "display": "standalone",
@@ -8,13 +8,13 @@
     "theme_color": "#ffffff",
     "icons": [
         {
-            "src": "icons/icon-192.png",
-            "sizes": "192x192",
-            "type": "image/png"
+            "src": "icons/favicon.svg",
+            "sizes": "any",
+            "type": "image/svg+xml"
         },
         {
-            "src": "icons/icon-512.png",
-            "sizes": "512x512",
+            "src": "icons/ctrltab-logo.png",
+            "sizes": "1080x1080",
             "type": "image/png"
         }
     ]
