fixed missing headers for accent colours

--- a/web/nginx.conf
+++ b/web/nginx.conf
@@ -6,6 +6,14 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Never cache HTML, CSS and JS so the browser always gets the latest version.
+    # ETag/304 still works, so bandwidth is only used when a file actually changed.
+    location ~* \.(html|css|js)$ {
+        add_header Cache-Control "no-cache, must-revalidate";
+        etag on;
+        try_files $uri $uri/ /index.html;
+    }
+
     # API reverse proxy
     location /api/ {
         proxy_pass http://api:3000/api/;
